// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders githubURL 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div
    className={undefined}
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item"
        href="/"
      >
        <span
          className="is-hidden-mobile"
        />
      </a>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
      >
        <a
          className="navbar-item"
          href="https://github.com/sindresorhus/cows"
        >
          GitHub
          <Icon
            className={null}
            icon="github"
            type="fab"
          />
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`renders title 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div
    className={undefined}
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item"
        href="/"
      >
        <span
          className="is-hidden-mobile"
        >
          Super Cool Docs
        </span>
      </a>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
      >
        <a
          className="navbar-item"
          href={undefined}
        >
          GitHub
          <Icon
            className={null}
            icon="github"
            type="fab"
          />
        </a>
      </div>
    </div>
  </div>
</nav>
`;
